--- a/index.html
+++ b/index.html
@@ -351,10 +351,10 @@ text-decoration:none;">Connect on Whatsapp</a></p>
 <!-- Contact -->
 <section style="margin-top:100px;" id="contact">
 <h2>Contact Us</h2>
-<p>📞 <b>Call / WhatsApp:</b> +91 9978653852</p>
+<p>📞 <b>Call / WhatsApp:</b> +91 99 786 53 8 52</p>
 <p>📧 <b>Email:</b>zairuqdesignstudio@gmail.com</p>
-<p>📍 <b>Address:</b> Available on Request</p>
 <a href="https://wa.me/919978653852" target="_blank" class="whatsapp-btn">Chat on WhatsApp</a>
+
 </section>
 
 <footer>
