--- a/index.html
+++ b/index.html
@@ -194,6 +194,104 @@ footer .socials a:hover {
 </nav>
 </header>
 
+
+<!-- 🌟 Zairuq Design Studio – Logo & Social Links Section -->
+<section class="connect-section">
+  <div class="connect-container">
+    <img src="logo.png" alt="Zairuq" class="connect-logo">
+    <h2 class="connect-title">Stay Connected</h2>
+    <div class="social-icons">
+      <a href="https://www.facebook.com/zairuqdesignstudio" target="_blank" class="social-link facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/zairuqdesignstudio" target="_blank" class="social-link instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.youtube.com/@zairuqdesignstudio" target="_blank" class="social-link youtube">
+        <i class="fab fa-youtube"></i>
+      </a>
+    </div>
+  </div>
+</section>
+
+<!-- 🎨 CSS Section -->
+<style>
+.connect-section {
+  background: #00bcd4;
+  background-image: repeating-linear-gradient(
+    45deg,
+    #00bcd4 0,
+    #00bcd4 10px,
+    #00aab3 10px,
+    #00aab3 20px
+  );
+  padding: 60px 20px;
+  text-align: center;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+}
+
+.connect-container {
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 2;
+}
+
+.connect-logo {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  margin-bottom: 15px;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+  background: #fff;
+}
+
+.connect-title {
+  font-size: 28px;
+  font-weight: 600;
+  margin: 15px 0;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 1px;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  margin-top: 15px;
+}
+
+.social-link {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  font-size: 26px;
+  color: #fff;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+.social-link.facebook { background: #3b5998; }
+.social-link.instagram { background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af, #515bd4); }
+.social-link.youtube { background: #ff0000; }
+
+.social-link:hover {
+  transform: scale(1.15);
+  opacity: 0.9;
+}
+</style>
+
+<!-- Font Awesome for Icons -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+
+
+
 <section id="home">
 <p style="text-align:center;">
  <a href="https://wa.me/9978653852"
