--- a/index.html
+++ b/index.html
@@ -173,12 +173,9 @@ footer .socials a:hover {
     font-size: 28px;
   }
 }
-
-
 </style>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 </head>
 <body>
 
@@ -194,110 +191,85 @@ footer .socials a:hover {
 </nav>
 </header>
 
+<!-- 🌟 Zairuq Design Studio – Logo with Connected Social Icons -->
+<section style="margin-top:100px;" class="zairuq-connect">
+<div class="circle-container">
 
-<!-- 🌟 Zairuq Design Studio – Logo & Social Links Section -->
-<section class="connect-section">
-  <div class="connect-container">
-    <img src="logo.png" alt="Zairuq" class="connect-logo">
-    <h2 class="connect-title">Stay Connected</h2>
-    <div class="social-icons">
-      <a href="https://www.facebook.com/zairuqdesignstudio" target="_blank" class="social-link facebook">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="https://www.instagram.com/zairuqdesignstudio" target="_blank" class="social-link instagram">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://www.youtube.com/@zairuqdesignstudio" target="_blank" class="social-link youtube">
-        <i class="fab fa-youtube"></i>
-      </a>
-    </div>
+<img src="https://i.ibb.co/zmNfChb/Zairuq-Design-Studio-Logo.png" alt="Zairuq Design Studio Logo" class="center-logo">
+
+<!-- Social Icons Around -->
+    <a href="https://www.facebook.com/zairuqdesignstudio" target="_blank" class="icon fb">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.instagram.com/zairuqdesignstudio" target="_blank" class="icon ig">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.youtube.com/@zairuqdesignstudio" target="_blank" class="icon yt">
+      <i class="fab fa-youtube"></i>
+    </a>
+    <a href="https://wa.me/919978653852" target="_blank" class="icon wa">
+      <i class="fab fa-whatsapp"></i>
+    </a>
   </div>
+  <h2 class="connect-title">Stay Connected</h2>
 </section>
 
-<!-- 🎨 CSS Section -->
+<!-- 💎 CSS -->
 <style>
-.connect-section {
-  background: #00bcd4;
-  background-image: repeating-linear-gradient(
-    45deg,
-    #00bcd4 0,
-    #00bcd4 10px,
-    #00aab3 10px,
-    #00aab3 20px
-  );
-  padding: 60px 20px;
+.zairuq-connect {
+  background: radial-gradient(circle, #00bcd4, #008c9e);
+  padding: 80px 20px;
   text-align: center;
-  color: #fff;
-  position: relative;
+  color: white;
   overflow: hidden;
-}
-
-.connect-container {
-  max-width: 600px;
-  margin: 0 auto;
   position: relative;
-  z-index: 2;
 }
 
-.connect-logo {
-  width: 160px;
-  height: 160px;
+.circle-container {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+}
+
+.center-logo {
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
-  margin-bottom: 15px;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 25px rgba(255,255,255,0.3);
+  z-index: 2;
+  transition: 0.4s;
 }
 
-.connect-title {
-  font-size: 28px;
-  font-weight: 600;
-  margin: 15px 0;
-  font-family: 'Poppins', sans-serif;
-  letter-spacing: 1px;
+.center-logo:hover {
+  transform: translate(-50%, -50%) scale(1.1);
+  box-shadow: 0 0 35px rgba(255,255,255,0.6);
 }
 
-.social-icons {
+.icon {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
   display: flex;
-  justify-content: center;
-  gap: 25px;
-  margin-top: 15px;
-}
-
-.social-link {
-  display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
+  color: white;
   font-size: 26px;
-  color: #fff;
-  transition: 0.3s;
-  text-decoration: none;
+  transition: all 0.4s ease;
+  box-shadow: 0 0 12px rgba(0,0,0,0.3);
 }
 
-.social-link.facebook { background: #3b5998; }
-.social-link.instagram { background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af, #515bd4); }
-.social-link.youtube { background: #ff0000; }
-
-.social-link:hover {
-  transform: scale(1.15);
-  opacity: 0.9;
-}
-</style>
-
-<!-- Font Awesome for Icons -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+/* Positioning social icons in circle */
+.fb { background: #1877f2; top: 0; left: 50%; transform: translate(-50%, -30%); }
+.ig { background: linear-gradient(45deg,#f58529,#dd2a7b,#8134af,#515bd4); right: 0; top:
 
 
 
-
-<section id="home">
-<p style="text-align:center;">
- <a href="https://wa.me/9978653852"
-style="color:#f39c12;
-text-decoration:none;">Connect on Whatsapp</a></p>
-</section>
 
 <section style="margin-top:100px;" id="services">
 
@@ -441,13 +413,13 @@ text-decoration:none;">Connect on Whatsapp</a></p>
 
 
 <!-- About -->
-<section style="margin-top:100px;" id="about">
+<section style="margin-top:120px;" id="about">
 <h2>About Us</h2>
 <p>At <b-justify>ZAIRUQ Design Studio</b>, we specialize in creative designing & high-quality printing solutions. From visiting cards & NFC cards to customized merchandise & professional logo designs, we bring your ideas to life with precision, creativity, & style.</p>
 </section>
 
 <!-- Contact -->
-<section style="margin-top:100px;" id="contact">
+<section style="margin-top:120px;" id="contact">
 <h2>Contact Us</h2>
 <p>📞 <b>Call / WhatsApp:</b> +91 99 786 53 8 52</p>
 <p>📧 <b>Email:</b>zairuqdesignstudio@gmail.com</p>
