--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ footer .socials a:hover {
 </header>
 
 <!-- 🌟 Zairuq Design Studio Social Media Bubble Section -->
-<section class="social-bubble-section">
+<section style="margin-top:100px;" class="social-bubble-section">
   <div class="bubble-container">
     <img src="https://i.ibb.co/zmNfChb/Zairuq-Design-Studio-Logo.png" alt="Zairuq Design Studio Logo" class="center-logo">
 
@@ -232,13 +232,13 @@ footer .socials a:hover {
 .bubble-container {
   position: relative;
   width: 400px;
-  height: 400px;
+  height: 200px;
   margin: 0 auto;
 }
 
 .center-logo {
-  width: 110px;
-  height: 110px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   background: #fff;
   padding: 10px;
