--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@ footer .socials a:hover {
 </header>
 
 <!-- 🌟 Zairuq Design Studio Social Media Bubble Section -->
-<section style="margin-top:100px;" class="social-bubble-section">
+<section id="home" style="margin-top:50px;" class="social-bubble-section">
   <div class="bubble-container">
-    <img src="https://i.ibb.co/zmNfChb/Zairuq-Design-Studio-Logo.png" alt="Zairuq Design Studio Logo" class="center-logo">
+    <img src="logo.png" alt="Zairuq Design Studio Logo" class="center-logo">
 
     <!-- Floating Social Icons -->
     <a href="https://www.facebook.com/zairuqdesignstudio" target="_blank" class="bubble fb">
@@ -295,7 +295,7 @@ footer .socials a:hover {
 @media (max-width: 600px) {
   .bubble-container {
     width: 300px;
-    height: 300px;
+    height: 150px;
   }
   .bubble {
     width: 55px;
@@ -303,8 +303,8 @@ footer .socials a:hover {
     font-size: 22px;
   }
   .center-logo {
-    width: 90px;
-    height: 90px;
+    width: 55px;
+    height: 55px;
   }
 }
 </style>
