--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ footer .socials a:hover {
 
 
 
-<section style="margin-top:100px;" id="services">
+<section style="margin-top:110px;" id="services">
 
   <h2>OUR CREATIVE SERVICES</h2>
 
@@ -441,13 +441,13 @@ footer .socials a:hover {
 
 
 <!-- About -->
-<section style="margin-top:120px;" id="about">
+<section style="margin-top:130px;" id="about">
 <h2>About Us</h2>
 <p>At <b-justify>ZAIRUQ Design Studio</b>, we specialize in creative designing & high-quality printing solutions. From visiting cards & NFC cards to customized merchandise & professional logo designs, we bring your ideas to life with precision, creativity, & style.</p>
 </section>
 
 <!-- Contact -->
-<section style="margin-top:120px;" id="contact">
+<section id="contact">
 <h2>Contact Us</h2>
 <p>📞 <b>Call / WhatsApp:</b> +91 99 786 53 8 52</p>
 <p>📧 <b>Email:</b>zairuqdesignstudio@gmail.com</p>
