--- a/index.html
+++ b/index.html
@@ -218,13 +218,15 @@ footer .socials a:hover {
 
 <!-- 🎨 CSS Section -->
 <style>
+
 .social-bubble-section {
-  background: #ffeb3b;
-  background-image: radial-gradient(circle at center, #ffeb3b 60%, #f9d923);
-  padding: 100px 20px;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
+  background-color: #ffeb3b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 100px 0;
 }
 
 .bubble-container {
