--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@ footer .socials a:hover {
 
 .bubble-container {
   position: relative;
-  width: 400px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   margin: 0 auto;
 }
 
@@ -242,8 +242,7 @@ footer .socials a:hover {
   height: 70px;
   border-radius: 50%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: center;  justify-content: center;
   font-size: 28px;
   color: #fff;
   transition: all 0.3s ease;
