--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ footer .socials a:hover {
 </header>
 
 <!-- 🌟 Zairuq Design Studio - Social Media Bubble Section -->
-<section id="social" class="social-bubble-section">
+<section id="social" style="margin-top:120px;" class="social-bubble-section">
   <div class="bubble-container">
     <a href="https://www.facebook.com/zairuqdesignstudio" target="_blank" class="bubble fb">
       <i class="fab fa-facebook-f"></i>
@@ -292,7 +292,7 @@ footer .socials a:hover {
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 
-<section style="margin-top:110px;" id="services">
+<section id="services">
 
   <h2>OUR CREATIVE SERVICES</h2>
 
