--- a/index.html
+++ b/index.html
@@ -286,7 +286,6 @@ footer .socials a:hover {
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-
 .
 <section id="services">
 
@@ -430,7 +429,7 @@ footer .socials a:hover {
 
 
 <!-- About -->
-<section style="margin-top:130px;" id="about">
+<section id="about">
 <h2>About Us</h2>
 <p>At <b-justify>ZAIRUQ Design Studio</b>, we specialize in creative designing & high-quality printing solutions. From visiting cards & NFC cards to customized merchandise & professional logo designs, we bring your ideas to life with precision, creativity, & style.</p>
 </section>
