--- a/index.html
+++ b/index.html
@@ -193,13 +193,11 @@ footer .socials a:hover {
 
 <!-- 🌟 Zairuq Design Studio - Social Media Bubble Section -->
 
-<!-- ====== Follow Us Section Start ====== -->
-<section class="follow-us-section">
-  <div class="social-container">
-    <div class="center-circle">
-      <span class="follow-text">Follow Us</span>
-    </div>
 
+
+<!-- ===== Floating Rotating Social Icons Start ===== -->
+<div class="floating-social-icons">
+  <div class="social-bubble">
     <a href="https://facebook.com/zairuqdesignstudio" target="_blank" class="icon fb"><i class="fab fa-facebook-f"></i></a>
     <a href="https://instagram.com/zairuqdesignstudio" target="_blank" class="icon ig"><i class="fab fa-instagram"></i></a>
     <a href="https://youtube.com/@zairuqdesignstudio" target="_blank" class="icon yt"><i class="fab fa-youtube"></i></a>
@@ -207,71 +205,29 @@ footer .socials a:hover {
     <a href="https://linkedin.com/company/zairuqdesignstudio" target="_blank" class="icon li"><i class="fab fa-linkedin-in"></i></a>
     <a href="https://wa.me/918000000000?text=Hello%20ZAIRUQ%20Design%20Studio!" target="_blank" class="icon wa"><i class="fab fa-whatsapp"></i></a>
   </div>
-</section>
+</div>
 
 <style>
-/* ====== Follow Us Section ====== */
-.follow-us-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 60px 0;
-  margin-top: 120px;
-  background: #f4f5f7;
+/* ===== Floating Social Icons ===== */
+.floating-social-icons {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 280px;
+  height: 280px;
+  transform: translate(-50%, -50%);
+  pointer-events: none; /* allow page text clicks */
+  z-index: 999;
 }
 
-/* Center and Orbit */
-.social-container {
+.social-bubble {
   position: relative;
-  width: 260px;
-  height: 260px;
-}
-
-/* Center Circle */
-.center-circle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 70px;
-  height: 70px;
-  background: #ffffff;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-  z-index: 10;
+  animation: rotate 15s linear infinite;
 }
 
-/* Follow Us Text (Bold + Stylish + Gradient) */
-.follow-text {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 800;
-  font-size: 15px;
-  background: linear-gradient(45deg, #ff005a, #ff9500, #1da1f2, #00c853, #8e24aa);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-/* Dashed Orbit Line */
-.social-container::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 180px;
-  height: 180px;
-  border: 1.5px dashed rgba(0,0,0,0.15);
-  border-radius: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-}
-
-/* Icon Settings */
 .icon {
   position: absolute;
   width: 45px;
@@ -280,17 +236,20 @@ footer .socials a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: #fff;
   font-size: 20px;
-  text-decoration: none !important;
-  animation: orbit 15s linear infinite;
-}
-
-.icon i {
   text-decoration: none;
+  pointer-events: auto; /* enable click on icons */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Individual Colors */
+/* Hover glow */
+.icon:hover {
+  transform: scale(1.25);
+  box-shadow: 0 0 15px rgba(255,255,255,0.8);
+}
+
+/* Icon colors */
 .fb { background: #1877f2; }
 .ig { background: radial-gradient(circle at 30% 30%, #fdf497 0%, #fd5949 45%, #d6249f 60%, #285AEB 90%); }
 .yt { background: #ff0000; }
@@ -298,32 +257,24 @@ footer .socials a:hover {
 .li { background: #0077b5; }
 .wa { background: #25d366; }
 
-/* Perfect Circle Positions */
-.fb { top: 0; left: 50%; transform: translate(-50%, 0); animation-delay: 0s; }
-.ig { top: 18%; right: 0; transform: translate(0, -50%); animation-delay: 2.5s; }
-.wa { bottom: 18%; right: 0; transform: translate(0, 50%); animation-delay: 5s; }
-.li { bottom: 0; left: 50%; transform: translate(-50%, 0); animation-delay: 7.5s; }
-.tw { bottom: 18%; left: 0; transform: translate(0, 50%); animation-delay: 10s; }
-.yt { top: 18%; left: 0; transform: translate(0, -50%); animation-delay: 12.5s; }
+/* Perfect orbit positions */
+.fb { top: 0; left: 50%; transform: translate(-50%, 0); }
+.ig { top: 20%; right: 0; transform: translate(0, -50%); }
+.wa { bottom: 20%; right: 0; transform: translate(0, 50%); }
+.li { bottom: 0; left: 50%; transform: translate(-50%, 0); }
+.tw { bottom: 20%; left: 0; transform: translate(0, 50%); }
+.yt { top: 20%; left: 0; transform: translate(0, -50%); }
 
-/* Hover Effect */
-.icon:hover {
-  transform: scale(1.2);
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-}
-
-/* Rotation Animation (faster & tighter) */
-@keyframes orbit {
-  from { transform: rotate(0deg) translateY(-90px) rotate(0deg); }
-  to { transform: rotate(360deg) translateY(-90px) rotate(-360deg); }
+/* Orbit Animation */
+@keyframes rotate {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
 </style>
 
 <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;800&display=swap" rel="stylesheet">
-<!-- ====== Follow Us Section End ====== -->
+<!-- ===== Floating Rotating Social Icons End ===== -->
 
 
 
